# BAI

./: .gitignore  API_FIXES_SUMMARY.md  CURRENT_STATUS.md  CURSOR_INTEGRATION_SUMMARY.md  CURSOR_SERVER_STARTUP.md  FINAL_SUMMARY.md  FOOTER_IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MIGRATION_COMMANDS.md  MIGRATION_COMPLETE.md  MIGRATION_ERRORS_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  POSTGRESQL_MIGRATION_COMPLETE.md  POSTGRES_MIGRATION_COMPLETE.md  POSTGRES_MIGRATION_GUIDE.md  PROFILE_INTEGRATION_SUMMARY.md  PURCHASES_MODULE_GUIDE.md  PURCHASES_MODULE_SUMMARY.md  QUICK_SETUP_GUIDE.md  QUICK_START.md  README.md  add_refund_status_column.py  add_shipment_columns.py  add_shipment_customer_column.py  add_user_columns.py  add_user_timestamps.py  bai_db_backup_20250924_212528.db  check_db_schema.py  check_db_status.py  check_delivery_note_data.py  check_delivery_notes_schema.py  check_existing_items.py  check_invoice_count.py  check_invoice_data.py  check_not_null_constraints.py  check_pg_schema.py  check_shipment_columns.py  check_shipment_data.py  check_shipment_tables.py  check_shipments_schema.py  (+82 more)
backend/: .env.example  README.md  add_invoice_number_columns.py  add_organization_table.py  add_rcm_column.py  alembic.ini  bai_db.db  bai_db_backup.db  bai_db_backup_20250930_170501.db  check_credits.py  check_data.py  cleanup_data.py  clear_all_data.py  create_payment_data.py  create_sales_tables.py  create_test_user.py  fix_dashboard_columns.py  fix_return_credit_expiry.py  migrate_to_postgres.py  pyproject.toml  requirements.txt  seed_purchase_data.py  test_apis.py  (+12 more)
(+209 files in other folders)
