[project]
name = "bai-backend"
version = "0.1.0"
description = "BAI - Billing and Inventory Management Backend"
authors = [
    {name = "BAI Team", email = "team@bai.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.8.1",
    "email-validator>=2.2.0",
    "requests>=2.32.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"] 

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
